# eons-game

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint  format.ps1  vcpkg.json
eons/: CMakeLists.txt  engine.ini  eons.ini  game.ini  main.cpp  pch.h
eons-game/: CMakeLists.txt  eons.ini  main.cpp  pch.h
eons-game/assets/: triangle.hlsl
eons-game/src/: alloc_overrides.cpp
eons-game/src/microcosmos/: GameGroups.h  Genes.h  MicrocosmModule.cpp  MicrocosmModule.h  OrganismFactory.h  SpeciesRegistry.cpp  SpeciesRegistry.h
eons-game/src/microcosmos/components/: FoodComponent.h  OrganismAIComponent.cpp  OrganismAIComponent.h  OrganismComponent.h  SpeciesComponent.cpp  SpeciesComponent.h
eons-game/src/microcosmos/systems/: FoodSystem.cpp  FoodSystem.h  InitSystem.cpp  InitSystem.h  OrganismAISystem.cpp  OrganismAISystem.h  OrganismSystem.cpp  OrganismSystem.h  SpeciesGuiSystem.cpp  SpeciesGuiSystem.h  SpeciesSystem.cpp  SpeciesSystem.h
eons/cmake/: copy_files.cmake
eons/src/experimental/NeuralNetwork/: neural_network.h
eons/src/microcosmos/: Genes.h  MicrocosmModule.cpp  MicrocosmModule.h  MicrocosmWorld.cpp  MicrocosmWorld.h  OrganismFactory.h  SpeciesRegistry.cpp  SpeciesRegistry.h
eons/src/microcosmos/components/: FoodComponent.h  OrganismAIComponent.cpp  OrganismAIComponent.h  OrganismComponent.cpp  OrganismComponent.h  SpeciesComponent.cpp  SpeciesComponent.h
eons/src/microcosmos/systems/: FoodSystem.cpp  FoodSystem.h  InitSystem.cpp  InitSystem.h  OrganismAISystem.cpp  OrganismAISystem.h  OrganismSystem.cpp  OrganismSystem.h  SpeciesGuiSystem.cpp  SpeciesGuiSystem.h  SpeciesSystem.cpp  SpeciesSystem.h
ncore/: CMakeLists.txt  COPYRIGHT.txt  Definitions.h  Doxyfile.in  Engine.cpp  Engine.h  MacroUtils.h  README.md  engine.ini.sample  pch.h
ncore/docs/: ARCHITECTURE.md
ncore/docs/doxygen/: custom.css  header.html
ncore/docs/sphinx/: conf.py  index.rst
ncore/include/: CMakeLists.txt  ncore.h  ncore.hpp
ncore/include/ncore/: application.h  game_world.h
ncore/include/ncore/kernel/: alloc_overrides.h  collection.h  config.h  errors.h  memory.h  object.h  random.h  reference.h  resource.h  rid.h  service.h  structures.h  types.h  world.h
ncore/include/ncore/modules/: game_world.h  module.h  module_registry.h  service.h  service_locator.h
ncore/include/ncore/runtime/: ecs_base_features.h  ecs_entity.h  ecs_feature.h  ecs_query.h  ecs_runtime.h  ecs_system.h  ecs_world.h  game_loop.h  game_world.h  main_loop.h  service_locator.h
ncore/include/ncore/scene/: node.h  scene.h
ncore/include/ncore/utils/: assert.h  config.h  four_cc.h  log.h  macro.h
ncore/modules/: Config.h  MainLoop.cpp  MainLoop.h  Services.h  World.cpp  World.h
ncore/modules/audio/: AudioManager.cpp  AudioManager.h
ncore/modules/ecs/: Component.h  Entity.cpp  Entity.h  System.h
ncore/modules/ecs/components/: RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h
ncore/modules/ecs/systems/: AudioSystem.cpp  AudioSystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h
ncore/modules/events/: Event.h  EventBus.h  EventType.h  InputEvent.h
ncore/modules/graphics/: Camera.cpp  Camera.h  ICamera.h  IGraphicsContext.cpp  IGraphicsContext.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
ncore/modules/gui/: Gui.cpp
ncore/modules/physics/: Physics.cpp  Physics.h
ncore/modules/resources/: IResourceLoader.h  Resource.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  ResourcePool.h
ncore/modules/utils/: Logger.cpp  Logger.h  Structures.h
ncore/platform/imgui/: ImGuiSDLRenderer.h
ncore/platform/sdl3/events/: EventBackendSDL.cpp  EventBackendSDL.h
ncore/platform/sdl3/graphics/: SDLGraphicsContext.cpp  SDLGraphicsContext.h
ncore/platform/sdl3/resources/: SDLAudioLoader.cpp  SDLAudioLoader.h  SDLImageLoader.cpp  SDLImageLoader.h
ncore/src/: CMakeLists.txt  application.cpp
ncore/src/assets/: global_res.h
ncore/src/backends/box2d/: box2d_physics_impl.cpp  box2d_physics_impl.h
ncore/src/backends/dear-imgui/: dear_imgui_impl.cpp  dear_imgui_impl.h  imgui_impl.cpp  imgui_impl.h
ncore/src/backends/ncore/: README.md
ncore/src/backends/sdl/: imgui_sdl.cpp  imgui_sdl.h  sdl_audio_impl.cpp  sdl_audio_impl.h  sdl_audio_loader.cpp  sdl_audio_loader.h  sdl_event_helpers.h  sdl_image_loader.cpp  sdl_image_loader.h  sdl_render_backend.cpp  sdl_render_backend.h  sdl_render_device.h  sdl_render_impl.cpp  sdl_render_impl.h  sdl_type_helpers.h  sdl_window_impl.cpp  sdl_window_impl.h
ncore/src/backends/vulkan/: batch_renderer_2d.cpp  batch_renderer_2d.h  diligent_allocator.h  vk_global_shaders.h  vk_render_backend.cpp  vk_render_backend.h  vk_render_device.cpp  vk_render_device.h  vk_render_surface.cpp  vk_render_surface.h
ncore/src/kernel/: config.cpp  config.h  containers.h  memory.cpp  object.cpp  structures.cpp  types.cpp
ncore/src/modules/assets/: asset.cpp  asset.h  asset_loader.h  asset_manager.cpp  asset_manager.h  asset_pool.cpp  asset_pool.h  sdl_audio_loader.cpp  sdl_audio_loader.h  sdl_image_loader.cpp  sdl_image_loader.h
ncore/src/modules/audio/: audio_clip.h  audio_module.cpp  audio_service.h  sdl_audio_impl.cpp  sdl_audio_impl.h
ncore/src/modules/ecs/: ecs_entity_builder.cpp  ecs_query.cpp  (+3 more)
ncore/src/runtime/: ecs_base_feature.cpp  ecs_base_feature.h  ecs_base_features.cpp  ecs_entity_builder.cpp  ecs_query.cpp  ecs_runtime.cpp  ecs_system.cpp  ecs_world.cpp  flecs_helpers.h  game_loop.cpp  main_loop.cpp  register_types.cpp  register_types.h
ncore/src/scene/: README.md  node.cpp  scene.cpp
ncore/src/utils/: config.cpp  four_cc.cpp
ncore/tests/: CMakeLists.txt  main.cpp
ncore/tooling/: README.md
ncore/utils/: Assert.h  Macro.h  Structures.cpp
ncore/utils/logger/: AssertHandler.cpp  AssertHandler.h  LogChannel.cpp  LogChannel.h  LogLevel.h  Logger.cpp  Logger.h  Sink.cpp  Sink.h
ncore/vendors/: CMakeLists.txt  premake5.lua  vendor_prebuilt.cmake
vendors/: CMakeLists.txt
vendors/mINI/: ini.h
(+326 files in other folders)
